--- a/config_git_fixer.yml
+++ b/config_git_fixer.yml
@@ -1,6 +1,9 @@
 git_fixer_remove:
   - git_fixer2_MODIFIED*.py
   - intro_MODIFIED_*.md
+  - "_*MODIFIED_*MODIFIED_*"
+  - "data/_*MODIFIED_*MODIFIED_*"
+  - "images/_*MODIFIED_*MODIFIED_*"
   - _MODIFIED_*.gitignore
   - requirements_MODIFIED_*.txt
 git_fixer_ignore:
