refining commit reminders

--- a/config_git_fixer.yml
+++ b/config_git_fixer.yml
@@ -7,6 +7,8 @@ git_fixer_remove:
   - _MODIFIED_*.gitignore
   - requirements_MODIFIED_*.txt
 git_fixer_ignore:
+  - commit_us.txt
+  - tracked_files.txt
   - config_git_fixer.yml
   - diff*.diff
   - class_*_MODIFIED*.ipynb
